Challenge Part 2 commit

--- a/Weather_Database.ipynb
+++ b/Weather_Database.ipynb
@@ -768,13 +768,7 @@
       "Processing Record 4 of Set 12 | narsaq\n",
       "Processing Record 5 of Set 12 | hirado\n",
       "Processing Record 6 of Set 12 | cowra\n",
-      "Processing Record 7 of Set 12 | nzerekore\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Processing Record 7 of Set 12 | nzerekore\n",
       "Processing Record 8 of Set 12 | krasnokamsk\n",
       "Processing Record 9 of Set 12 | clarksburg\n",
       "Processing Record 10 of Set 12 | yerbogachen\n",
@@ -1133,13 +1127,6 @@
     "# Export the City_Data into a CSV.\n",
     "city_data_df.to_csv(output_data_file, index_label=\"City_ID\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
