Final Challenge Commit

--- a/Vacation_Itinerary.ipynb
+++ b/Vacation_Itinerary.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "[116 rows x 8 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "73  Hotel Ballast Wilmington, Tapestry Collection ...  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
        "102 -75.98  Hilton Virginia Beach Oceanfront  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
        "80  Holiday Inn St Louis SW - Route 66  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
        "78  Holiday Inn Express & Suites Panama City-Tyndall  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,36 +575,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gmaps.datasets\n",
     "# Configure gmaps to use your Google API key.\n",
     "gmaps.configure(api_key=g_key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(30.15, -85.57)"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "wilmington_coords\n",
-    "vb_coords\n",
-    "kirkwood_coords\n",
-    "callaway_coords"
    ]
   },
   {
@@ -616,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +690,7 @@
        "78  -85.57   Holiday Inn Express & Suites Panama City-Tyndall  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,13 +705,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
+   "execution_count": 105,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "333292c6ae2f45b8a8b98594f2cfc4e6",
+       "model_id": "bdc17230f6304dbfb8c89d257fe4fa62",
        "version_major": 2,
        "version_minor": 0
       },
@@ -747,26 +726,27 @@
     }
    ],
    "source": [
-    "fig1 = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "\n",
     "direction_layer = gmaps.directions_layer(\n",
     "        kirkwood_coords, vb_coords, waypoints=[callaway_coords, wilmington_coords],\n",
-    "        travel_mode='DRIVING')\n",
+    "        travel_mode='DRIVING', show_markers=False)\n",
     "\n",
-    "fig1.add_layer(direction_layer)\n",
+    "fig.add_layer(direction_layer)\n",
     "\n",
     "# Call the figure to plot the data.\n",
-    "fig1"
+    "fig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d124252969214ee2bc57e127b91183cc",
+       "model_id": "bdc17230f6304dbfb8c89d257fe4fa62",
        "version_major": 2,
        "version_minor": 0
       },
@@ -784,25 +764,18 @@
     "<dt>Hotel Name</dt><dd>{Hotel Name}</dd>\n",
     "<dt>City</dt><dd>{City}</dd>\n",
     "<dt>Country</dt><dd>{Country}</dd>\n",
-    "<dt>Current Weather</dt><dd>{Current Description}</dd>\n",
-    "<dt>Max Temp</dt><dd>{Max Temp} °F</dd>\n",
+    "<dt>Current Weather</dt><dd>{Current Description} and {Max Temp} °F</dd>\n",
     "</dl>\n",
     "\"\"\"\n",
     "\n",
     "# Store the DataFrame Row.\n",
-    "all_cities_info = [info_box_template.format(**row) for index, row in all_cities_df.iterrows()]\n",
+    "info_box_text = [info_box_template.format(**row) for index, row in all_cities_df.iterrows()]\n",
     "\n",
-    "# Add a heatmap of temperature for the vacation spots and a pop-up marker for each city.\n",
+    "# Add a temperature for the vacation spots and a pop-up marker for each city.\n",
     "locations = all_cities_df[[\"Lat\", \"Lng\"]]\n",
-    "max_temp = all_cities_df[\"Max Temp\"]\n",
-    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
-    "marker_layer = gmaps.marker_layer(locations, info_box_content=all_cities_info)\n",
     "\n",
-    "direction_layer = gmaps.directions_layer(\n",
-    "        kirkwood_coords, vb_coords, waypoints=[callaway_coords, wilmington_coords],\n",
-    "        travel_mode='DRIVING')\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content = info_box_text)\n",
     "\n",
-    "fig.add_layer(direction_layer)\n",
     "fig.add_layer(marker_layer)\n",
     "\n",
     "# Call the figure to plot the data.\n",
@@ -814,7 +787,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## NOTE: THE ONLY WAY TO GET THE MARKERS TO SHOW WITH THE INFO BOX WAS TO REMOVE THE MARKERS FROM THE DIRECTIONS LAYER."
+   ]
   }
  ],
  "metadata": {
